# cli_google_auth_from_exported_qr_jpg

./: Cargo.toml  LICENSE  README.md  cache12.txt
.github/workflows/: ActionCargoBuild.yml  RustAction.yml  cargo-build.yml  cargo-fmt-build-test.yml  fmt-build-test.yml
automation_tasks_rs/: .gitignore  Cargo.toml
automation_tasks_rs/src/: main.rs
code_generator/: Cargo.toml  README.md  _.rs
code_generator/src/: gauth_migration.proto  main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/cli_google_auth_from_exported_qr_jpg/: all.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.LibraryError.html  fn.generate_otp_token_from_qr_text.html  fn.get_qr_text_from_jpg.html  index.html  sidebar-items.js
docs/cli_google_auth_from_exported_qr_jpg/migration_mod/: fn.extract_data_from_uri.html  fn.generate_otp_token_from_qr_text.html  fn.get_data_from_migration.html  fn.get_qr_text_from_jpg.html  index.html  sidebar-items.js  struct.Account.html
docs/gajpg/: all.html  fn.generate_otp.html  fn.generate_otp_returns_err.html  fn.main.html  fn.print_help.html  index.html  sidebar-items.js
docs/src/cli_google_auth_from_exported_qr_jpg/: lib.rs.html  migration_mod.rs.html
docs/src/gajpg/: main.rs.html
docs/static.files/: NanumBarunGothic-LICENSE-2fe9ce67ec95245d.txt  main-3367e395607fafc1.js  settings-08ddfdda51b8ee2e.css  settings-c3c521c753752a1a.js
src/: lib.rs  migration_mod.rs
src/migration_mod/: gauth_migration_proto_mod.rs
tmp/: temp12.txt
(+36 files in other folders)
