[package]
name = "cli_google_auth_from_exported_qr_jpg"
version = "1.0.70"
description = "CLI generates 2FA OTP codes from exported QR jpg images from google authenticator"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/cli_google_auth_from_exported_qr_jpg"
categories = ["rust-patterns"]
keywords = ["Rust cli and library project"]
publish = true

[dependencies]
log = "0.4"
pretty_env_logger="0.4.0"
thiserror = "1.0.30"
anyhow="1.0.56"

bardecoder = "0.4.1"
image = "0.24.5"
# google_authenticator_converter = "0.2.0"
totp-rs = "4.2.0"

base32 = "0.4.0"
base64 = "0.21.0"
urlencoding = "2.1.2"

bytes = "1.4.0"
prost = "0.11.8"
